--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -93,6 +93,14 @@
         width: 95%;
         background-color: #785a46;
       }
+      &.crm {
+        width: 100%;
+        background-color: #05548D;
+      }
+      &.bot {
+        width: 100%;
+        background-color: #38D754;
+      }
       &.creo {
         width: 100%;
         background-color: #e8a735;
