--- a/scss/_reviews.scss
+++ b/scss/_reviews.scss
@@ -4,7 +4,7 @@
     box-shadow: 0 7px 10px #bab9b9;
     border-radius: 10px;
     margin-bottom: 30px;
-    .review-video {
+    .review-video, .review-img {
       height: 200px;
       img {
         width: 100%;
