--- a/css/project.css
+++ b/css/project.css
@@ -53,6 +53,51 @@ p {
   left: 0;
 }
 
+.video-widget .video-widget__hand {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  z-index: 10000;
+}
+
+.video-widget .video-widget__hand span {
+  position: absolute;
+  top: -9px;
+  right: 5px;
+  display: block;
+  width: 15px;
+  height: 15px;
+  background-color: #e3e3e3;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 0 1px 1px rgba(255, 255, 255, 0.7);
+  box-shadow: 0 0 1px 1px rgba(255, 255, 255, 0.7);
+  -webkit-animation: blinker 1s linear infinite;
+  animation: blinker 1s linear infinite;
+}
+
+@-webkit-keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
+
+.video-widget .video-widget__hand i {
+  position: relative;
+  color: #fff;
+  font-size: 20px;
+  z-index: 10;
+}
+
+.video-widget[data-state=opened] .video-widget__hand {
+  display: none;
+}
+
 section {
   padding: 35px 0;
 }
@@ -602,6 +647,11 @@ img::-moz-selection {
   height: 100%;
   -o-object-fit: cover;
   object-fit: cover;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.reviews .review-item .review-video iframe, .reviews .review-item .review-img iframe {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
