--- a/scss/_reviews.scss
+++ b/scss/_reviews.scss
@@ -13,6 +13,10 @@
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
       }
+      iframe {
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+      }
     }
     .review-author {
       padding: 15px;
